update debug command